--- a/qr30.html
+++ b/qr30.html
@@ -306,7 +306,7 @@
     <input type="hidden" name="isPromoterSelfBuy" value=""/>
     <input type="hidden" name="serialNo" value=""/>
     <input type="hidden" name="isGroupBuyOrder" value="false"/>
-                    <div class="sub-con full-con"><a href="https://te78.github.io/maiqian/404.html" style="color: #FFFFFF;"><input id="walletSubmit" type="button" class="btn-blue"
+                    <div class="sub-con full-con"><a href="https://te78.github.io/maiqian/fk30.html" style="color: #FFFFFF;"><input id="walletSubmit" type="button" class="btn-blue"
                                                  value="确认购买"></div>
         ##/form>
 <div class="propmt-info">
