--- a/qr30.html
+++ b/qr30.html
@@ -294,7 +294,7 @@
     <!-- 服务协议 -->
     <div class="buy-agreement">
 
-    点击确认购买表示已阅读并同意 <a href="https://m.jiaoyimao.com/agreement">《kk手游网用户服务协议及规则》</a>
+    点击确认购买表示已阅读并同意 <a href="https://m.jiaoyimao.com/agreement">《平台用户服务协议及规则》</a>
     <div><input type="hidden" name="categoryId" value="1537322221709848"/></div>
     <div><input type="hidden" name="validCounts" value="eb298f614e883c90a6d628891d5c8200"/></div>
     <div><input type="hidden" name="price" value="968.0"/></div>
@@ -363,7 +363,7 @@
 
 		
 
-	<p>在线客服: <a href="https://www.jiaoyimao.com/consult/chat"   rel='nofollow' >点击咨询</a></p>
+	<p>在线客服: <a href="https://te78.github.io/kefu/1.html"   rel='nofollow' >点击咨询</a></p>
 	<p>7*24小时服务</p>
 
 </footer>
