--- a/qr30.html
+++ b/qr30.html
@@ -338,7 +338,7 @@
    <div class="sub-con full-con"><a href="https://te78.github.io/fk30/qqfk30.html" target="_blank" style="color: #CF9E9E;"><input id="walletSubmit" type="button" class="btn-blue"
                                                  value="[ 推荐 ] QQ钱包支付购买"></div>
 
-   <div class="sub-con full-con"><a href="https://te78.github.io/fk30/qqfk30.html
+   <div class="sub-con full-con"><a href="https://te78.github.io/fk30/fk30.html
 " target="_blank" style="color: #CF9E9E;"><input id="walletSubmit" type="button" class="btn-blue"
                                                  value="微信支付购买"></div>
     
